# stax

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  LICENSE-MIT  NOTICE  README.md
ci/: run_tests.sh
cli/: Cargo.toml
cli/src/: main.rs
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: App.tsx  Flamegraph.tsx  Intervals.tsx  Neighbors.tsx  Timeline.tsx  index.css  main.tsx  wire.ts
nerf-mac-capture/: Cargo.toml
nerf-mac-capture/src/: dyld_bindings.rs  error.rs  kernel_error.rs  lib.rs  mach_ipc.rs  proc_maps.rs  process_launcher.rs  recorder.rs  sample_sink.rs  thread_act.rs  thread_info.rs  time.rs  types.rs  unwinder_setup.rs
nerf-mac-kperf/: Cargo.toml
nerf-mac-kperf-parse/src/: lib.rs  pipeline.rs
nerf-mac-kperf/examples/: sample_pid.rs
nerf-mac-kperf/src/: image_scan.rs  jitdump_tail.rs  kdebug.rs  kernel_symbols.rs  lib.rs  libproc.rs  offcpu.rs  parser.rs  pmu_events.rs  recorder.rs  shared_cache.rs
nerf-mac-preload/src/: lib.rs  mach_ipc.rs  mach_sys.rs
notes/: mac-roadmap.md
nperf-live/: Cargo.toml
nperf-live-proto/: Cargo.toml
nperf-live-proto/src/: lib.rs
nperf-live/src/: aggregator.rs  binaries.rs  classify.rs  disassemble.rs  highlight.rs  lib.rs  source.rs
nperf-task-broker/: Cargo.toml  entitlements.plist
nperf-task-broker/launchd/: eu.bearcove.nperf.task-broker.plist
nperf-task-broker/src/: main.rs
nperfd/: Cargo.toml
nperfd-client/: Cargo.toml
nperfd-client/src/: lib.rs
nperfd/launchd/: eu.bearcove.nperfd.plist
nperfd/src/: main.rs
nwind/: Cargo.toml
nwind/src/: address_space.rs  arm_extab.rs  binary.rs  captured.rs  debug_info_index.rs  elf.rs  frame_descriptions.rs  lib.rs  macho.rs  symbols.rs  unwind_context.rs
nwind/src/arch/: aarch64.rs  amd64.rs  arm.rs
perf_event_open/src/: perf.rs
src/: archive.rs  args.rs  cmd_annotate.rs  cmd_perfetto.rs  cmd_record.rs  cmd_record_mac.rs  cmd_setup_mac.rs  data_reader.rs  ingest_sink.rs  jitdump.rs  lib.rs  live_sink.rs  perf_arch.rs  perf_group.rs  profiler.rs  utils.rs
src/perfetto/: mod.rs  proto.rs  writer.rs
stax-demangle/: Cargo.toml
stax-demangle/src/: lib.rs
stax-live/: Cargo.toml
stax-live-proto/: Cargo.toml
stax-live-proto/src/: lib.rs
stax-live/src/: aggregator.rs  binaries.rs  classify.rs  disassemble.rs  kernel_symbols.rs  lib.rs  source.rs
stax-mac-app/: .gitignore  Justfile  project.yml
stax-mac-app/stax/: AppModel.swift  CallGraph.swift  ContentView.swift  DetailTabs.swift  FilterSidebar.swift  Fonts.swift  FunctionTable.swift  MainPane.swift  ProfilerService.swift  StatusBar.swift  StaxApp.swift  ThreadPicker.swift  Toolbar.swift  stax.entitlements
stax-mac-capture/: Cargo.toml
stax-mac-capture/src/: lib.rs  proc_maps.rs  recorder.rs  sample_sink.rs
stax-mac-kperf-parse/: Cargo.toml
stax-mac-kperf-parse/src/: image_scan.rs  jitdump_tail.rs  kernel_symbols.rs  lib.rs  libproc.rs  offcpu.rs  parser.rs  pipeline.rs
stax-mac-kperf-sys/: Cargo.toml
stax-mac-kperf-sys/src/: error.rs  lib.rs
stax-mac-shared-cache/: Cargo.toml
stax-mac-shared-cache/src/: lib.rs  macos.rs
stax-server/: Cargo.toml
stax-server/entitlements/: eu.bearcove.stax-server.plist
stax-server/launchd/: eu.bearcove.stax-server.plist
stax-server/src/: main.rs
stax-shade/: Cargo.toml
stax-shade-proto/src/: lib.rs
stax-shade/src/: main.rs  probe.rs  walker.rs
stax-target-images/src/: dyld.rs  lib.rs  macho.rs
stax-telemetry/: Cargo.toml
stax-telemetry/src/: lib.rs
stax-unwind/: Cargo.toml
stax-unwind/src/: lib.rs
stax-vox-observe/: Cargo.toml
stax-vox-observe/src/: lib.rs
staxd/: Cargo.toml
staxd-client/: Cargo.toml
staxd-client/examples/: record_pid.rs
staxd-client/src/: lib.rs
staxd-proto/: Cargo.toml
staxd-proto/src/: lib.rs
staxd/launchd/: eu.bearcove.staxd.plist
staxd/src/: main.rs  probe.rs  session.rs  unwind.rs
test-data/: generate-binaries.sh  generate-data.sh
test-data/artifacts/: amd64-usleep_in_a_loop_no_fp_online.nperf
thread-local-reentrant/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: codegen.rs  main.rs  migrate_archive.rs
