[package]
name = "stax"
version = "0.1.1"
edition = "2018"

[dependencies]
structopt = "0.2"
log = "0.4"
env_logger = "0.11"
stax-core = { path = "..", default-features = false }

[dependencies.stax-live]
path = "../stax-live"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread"]

[features]
default = ["addr2line"]
addr2line = ["stax-core/addr2line"]
debug-logs = ["stax-core/debug-logs"]
