[package]
name = "nperf-task-broker"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
description = "Same-uid Mach IPC broker. Holds the cs.debugger entitlement so it can call task_for_pid against any same-uid (same-team) pid; clients send a pid and receive a Mach send right on the corresponding task port. Designed to run under launchd as a per-user LaunchAgent. The codesign step that grants the entitlement isn't done by cargo — see ./entitlements.plist + the just install-broker target."

[[bin]]
name = "nperf-task-broker"
path = "src/main.rs"

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.4"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
