[package]
name = "stax-live-proto"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
description = "Schema for the stax live RPC service. Lightweight crate consumed by both the runtime (stax-live) and the codegen (xtask)."

[dependencies]
facet = { version = "0.46", features = ["camino", "reflect"] }
vox = { git = "https://github.com/bearcove/vox", rev = "1bdc0aa4911765af726a4142ceb67812b0f6963d", default-features = false, features = ["runtime"] }
