[package]
name = "stax-mac-kperf-parse"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Unprivileged-side parsing and symbolication for stax's macOS sampling backend. Consumes the `KdBuf` record stream from `stax-mac-kperf-sys` (which is the privileged half) and assembles `Sample`s, walks libproc image regions, parses the on-disk kernel for symbol tables, and tails `/tmp/jit-<pid>.dump` for JIT'd code. Nothing here calls into a privileged kernel interface at runtime — the intent is that this crate works as the client side of an eventual staxd RPC."

[dependencies]
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
stax-mac-kperf-sys = { version = "0.1", path = "../stax-mac-kperf-sys" }
stax-mac-capture = { version = "0.1", path = "../stax-mac-capture" }
stax-mac-shared-cache = { version = "0.1", path = "../stax-mac-shared-cache" }
libc = "0.2"
memmap2 = "0.9"
object = { version = "0.39", default-features = false, features = ["std", "read_core", "macho", "unaligned"] }
